<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="412dp"
        android:layout_height="82dp"
        android:layout_marginTop="43dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/home"
            android:textColor="@color/themeColor" />

        <Button
            android:id="@+id/historyBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/history"
            android:textColor="@color/themeColor" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/themeColor"
            android:text="@string/settings"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/general"
        android:textColor="@color/lightBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="174dp"
        android:layout_height="141dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="7dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/wei"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/c"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/goal"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="89dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/prof"
        android:textColor="@color/lightBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/gen"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/wei" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView39"
        android:layout_width="86dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="23dp"
        android:text="@string/other"
        android:textColor="@color/lightBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

    <LinearLayout
        android:layout_width="165dp"
        android:layout_height="142dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/alert_light_frame"
            android:text="@string/rst"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/feedback"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/privacy"
            android:textSize="16sp" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="60dp"
        android:text="@string/weightKg"
        android:textColor="@color/themeColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/weightLbs"
        android:textColor="@color/themeColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/capMl"
        android:textColor="@color/themeColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/capOz"
        android:textColor="@color/themeColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/switch2"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="114dp"
        android:layout_height="34dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/intakeGoal"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/themeColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/pWeight"
        android:textAlignment="center"
        android:textColor="@color/themeColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/pGender"
        android:textAlignment="center"
        android:textColor="@color/themeColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

</androidx.constraintlayout.widget.ConstraintLayout>