<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/themeColor"
            android:text="@string/home" />

        <Button
            android:id="@+id/historyBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/history"
            android:textColor="@color/themeColor" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/themeColor" />
    </LinearLayout>

    <!-- Circular Shape -->

    <!-- Button to Increment Number -->

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="312dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="168dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tips01" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello welcome how's your health now"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="123dp"
        android:layout_height="122dp"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/waterman01" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="111dp"
        android:layout_height="42dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="464dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:text="@string/records"
        android:textSize="24dpsp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <View
        android:id="@+id/circleView"
        android:layout_width="279dp"
        android:layout_height="260dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:text="@string/capacity"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circleView"
        app:layout_constraintEnd_toEndOf="@+id/circleView"
        app:layout_constraintStart_toStartOf="@+id/circleView"
        app:layout_constraintTop_toTopOf="@+id/circleView" />

</androidx.constraintlayout.widget.ConstraintLayout>
